Stop title from clipping on smaller devices

--- a/style.css
+++ b/style.css
@@ -6,14 +6,22 @@
     display: flex;
 }
 
-body {
+html, body {
     margin: 0px;
     padding: 0px;
-    height: 100vh;
+    height: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: antiquewhite;
+}
+
+.everything {
+    min-height: 100vh;
+    overflow-y: auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .title {
@@ -51,6 +59,7 @@ img:hover {
 .round-status {
     margin-top: 30px;
     font-size: 1.5rem;
+    text-align: center;
 }
 
 .game-over-section {
@@ -102,4 +111,5 @@ img:hover {
     border-radius: 20px;
     margin-top: 30px;
     cursor: pointer;
+    margin-bottom: 50px;
 }
